[gd_scene load_steps=7 format=3 uid="uid://vmctgci7ykxm"]

[ext_resource type="Script" uid="uid://cj3fksdrwc78j" path="res://ui/StartMenu.gd" id="1_bx376"]
[ext_resource type="Texture2D" uid="uid://cvjoiryqljj0x" path="res://art/png/StartMenu.png" id="2_g1ph5"]
[ext_resource type="Texture2D" uid="uid://c6856f72htuyx" path="res://art/ui/PLAY.png" id="3_8mr4u"]
[ext_resource type="Texture2D" uid="uid://blfxv6v8vxthv" path="res://art/ui/T√çTULO.png" id="3_cu6oi"]
[ext_resource type="AudioStream" uid="uid://iwalpmekjdd4" path="res://sound/MEGAJAM INVIERNO RATTTTTTTTTTTTTTTTTTT.mp3" id="3_g1ph5"]
[ext_resource type="Texture2D" uid="uid://j4wgyt2i8i6e" path="res://art/ui/SETTINGS.png" id="4_cu6oi"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bx376")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501961, 0.486275, 0.454902, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g1ph5")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 79.0
offset_top = 98.0
offset_right = 1338.0
offset_bottom = 972.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="Label" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_cu6oi")
expand_mode = 5
stretch_mode = 5

[node name="Button" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("3_8mr4u")
texture_pressed = ExtResource("3_8mr4u")
texture_hover = ExtResource("3_8mr4u")
texture_disabled = ExtResource("3_8mr4u")
texture_focused = ExtResource("3_8mr4u")
ignore_texture_size = true
stretch_mode = 4

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("4_cu6oi")
texture_pressed = ExtResource("4_cu6oi")
texture_hover = ExtResource("4_cu6oi")
texture_disabled = ExtResource("4_cu6oi")
texture_focused = ExtResource("4_cu6oi")
ignore_texture_size = true
stretch_mode = 4

[node name="MenuPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g1ph5")
volume_db = 10.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_pressed"]
